gitops/infrastructure/security/vault/vault-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-service
  namespace: vault-secrets-operator-system
spec:
  type: ClusterIP
  ports:
    - name: https
      protocol: TCP
      appProtocol: https
      port: 8200
      targetPort: 8200
