gitops/infrastructure/security/vault/vault-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-route
  namespace: vault-secrets-operator-system
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: local-cluster-gateway
      namespace: networking
      sectionName: websecure

  hostnames:
    - vault.home

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: vault-service
          port: 8200
          weight: 1
